# server/api/Dto/JobApplicationDtos.cs
@@ -4,14 +4,14 @@ using api.Models;
 namespace api.Dto;
 
 public record JobApplicationCreateDto(
-    [Required] string CompanyName,
-    [Required] string Position,
+    [property: Required] string CompanyName,
+    [property: Required] string Position,
     JobApplicationStatus Status
 );
 
 public record JobApplicationUpdateDto(
-    [Required] string CompanyName,
-    [Required] string Position,
+    [property: Required] string CompanyName,
+    [property: Required] string Position,
     JobApplicationStatus Status,
     DateTime DateApplied
 );
